# CMS-NBI-Client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.test  MIGRATION_GUIDE.md  MODERNIZATION_IMPLEMENTATION_GUIDE.md  POST_RELEASE_CHECKLIST.md  PR_DESCRIPTION.md  README.md  RELEASE_ANNOUNCEMENT.md  SECURITY.md  WORKFLOW_FIXES.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.py  social_media_announcement.txt
.github/: agent.md  dependabot.yml
.github/agents/: README.md  init.md
.github/workflows/: ci.yml  docker-deploy.yml  docs.yml  release.yml
Examples/: update_config.py
Examples/NETCONF/E7/Create_Data/: ont.py  vlan_member.py  vlans.py
Examples/NETCONF/E7/Delete_Data/: delete_ont.py  vlan.py  vlan_member.py
Examples/NETCONF/E7/Query_Data/: query_discovered_onts_on_e7.py  query_onts_ethsvc.py  query_provisioned_onts_on_e7.py  query_vlans.py  show_dhcp_leases.py  show_vlan_members.py
Examples/NETCONF/E7/Update_Data/: ont.py
Examples/REST/Query_Data/: devices.py
docker/: README.md
docker/prometheus/: prometheus.yml
docs/: README.md  changelog.md  index.md
docs/api/: client.md
docs/examples/: e7-operations.md
docs/guides/: basic-usage.md  configuration.md  docker-deployment.md  installation.md  quickstart.md
scripts/: check-docker-versions.sh  check-release-status.sh  get-action-hashes.sh
src/cmsnbiclient/: __init__.py  __version__.py  client.py  client_v2.py  exceptions.py
src/cmsnbiclient/E7/: __init__.py  create.py  delete.py  query.py  update.py
src/cmsnbiclient/REST/: __init__.py  query.py
src/cmsnbiclient/core/: __init__.py  base.py  circuit_breaker.py  config.py  logging.py  transport.py
src/cmsnbiclient/monitoring/: __init__.py
src/cmsnbiclient/security/: __init__.py  credentials.py  xml.py
tests/: conftest.py  mock_server.py
tests/integration/: test_client_integration.py
tests/unit/: test_config.py  test_imports.py
